Mon Dec  6 11:24:12 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/OneFile/Single/OneFile_Connector.mpc:
          Resolved link errors/warnings on windows.

Mon Dec  6 11:14:04 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/OneFile/Multiple/OFM_Connector.mpc:
          Resolved link errors/warnings on windows.

Mon Dec  6 10:17:50 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MultiTopic/Sender/MultiTopic_Sender.mpc:
        * connectors/dds4ccm/tests/MultiTopic/Sender/MultiTopic_Sender_exec.cpp:
          Resolved linker errors on windows.

Mon Dec  6 00:27:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_ts_default.mpb:
          Updated some comments

        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector.mpc:
        * connectors/dds4ccm/tests/MultiTopic/Connector/ccm_dds_mt.idl:
        * connectors/dds4ccm/tests/PSAT/ccm_dds_psat.mpc:
          Fixed compile problems when no dds implementation is enabled

Sat Dec  4 10:37:05 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.cpp:
          Replace DDS4CCM logging macros with ACE macros, since this is user code
          and doesn't belong to the DDS4CCM core. This'll probably solve unresolved
          externals on windows builds.

Fri Dec  3 14:20:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/Getter_T.cpp:
        * connectors/dds4ccm/impl/Updater_T.cpp:
          Replace some DDS_xxx defines with ::DDS::xxx defines. DDS_xxx defines
          are not allowed in the DDS4CCM core.

Fri Dec  3 13:01:04 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/PSAT/DDS_PSAT_Connector_T.h:
          Resolve compile issue related to the number of template variables.
